# SalesPipelineTracker

./: README.md  app.py  database_tables.md  db_schema.sql  db_schema_django.sql  db_schema_structured.sql  file_index.md  fix_template.py  forms.py  generate_database_tables.py  generate_db_schema.py  generate_django_models.py  generate_file_index.py  generate_project_files.py  main.py  manage.py  models.py  project_files.md  pyproject.toml  replit.nix  wsgi.py
astrology/: admin.py  apps.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
astrology/migrations/: 0001_initial.py  0002_consultation_reports.py  0003_fix_profile_table.py  0004_whatsapp_config.py
celestial_insights_astrology/: README.md  routes.py  utils.py
celestial_insights_astrology/templates/: 404.html  index.html
metamystic/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: chat.css  custom.css
static/js/: main.js
staticfiles/js/: cart.js  chat.js
templates/: 404.html  500.html  about.html  base.html  contact.html  index.html
templates/account/: password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html
templates/admin/: base_site.html  blog_form.html  blog_posts.html  bookings.html  dashboard.html  login.html  products.html  report_confirm_delete.html  report_form.html  reports.html  service_confirm_delete.html  service_form.html  services.html  test_email.html
templates/astrology/: about.html  consultation_reports.html  contact.html  index.html  login.html  register.html  services.html  verify_otp.html
(+26 files in other folders)
