[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.40",
    "django-crispy-forms>=2.3",
    "django-allauth>=65.7.0",
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "pillow>=11.1.0",
    "crispy-bootstrap5>=2025.4",
    "oauthlib>=3.2.2",
    "django-phonenumber-field>=8.0.0",
    "phonenumbers>=9.0.2",
    "requests>=2.32.3",
    "pyjwt>=2.10.1",
    "cryptography>=44.0.2",
    "django-widget-tweaks>=1.5.0",
]
